@startuml design

class Program
{
    
}

class Prompt
{
    -_prompts : List<string>
    +Prompt(in prompts : List<string>)
    +DisplayPrompt(in index : int) : void
    +DisplayRandomPrompt() : void
    +ListAllPrompts() : void
}

class Activity
{
    -_name : string
    -_description : string
    -_completionMessage : string
    ~Activity(name : string, description : string, completionMessage : string)
    ~GetStartingMessage() : string
    ~Start() : void
    ~End() : void
}

class BreathingActivity
{
    -_activityDuration : int
    -_breatheInDuration : int
    -_breatheOutDuration : int
    +BreathingActivity(name : string, startingMessage : string, completionMessage : string)
    -Main() : void
    -GetActivityDuration() : void
    -PauseToGetReady() : void
    -Breathe() : void
    -BreatheIn() : void
    -BreathOut() : void
}

class ReflectionActivity
{
    -_activityDuration : int
    -_reflectionPrompts : List<string>
    -_reflectionQuestions : List<string>
    +ReflectionActivity(name : string, description : string, completionMessage : string, reflectivePromptsSeparatedByCommas : string, reflectiveQuestionsSeparatedByCommas : string)
    -SetReflectivePromptsList(promptsSeparatedByCommas : string) : void
    -SetReflectiveQuestionsList(questionsSeparatedByCommas : string) : void
    -Main() : void
    -GetActivityDuration() : void
    -PauseToGetReady() : void
    -GiveThoughtfulPrompt() : void
    -GiveReflectiveQuestions(numberOfQuestions : int) : void
}

class ListingActivity
{
    -_responceAmount : int
    -_questions : List<string>
    +ListingActivity(name : string, startingMessage : string, completionMessage : string, questionsSeparatedByCommas : string)
    -SetQuestionsList(questionsSeparatedByCommas : string) : void
    -Main() : void
    -GetResponceAmount() : void
    -PauseToGetReady() : void
    -GiveQuestion() : void
    -GetResponces() : void
}

class Timer
{
    -_seconds : int
    -_message : string
    ~Timer(seconds : int, message : string)
    ~GetSeconds() : int
    ~GetMessage() : string
}

class CountdownTimer
{
    +CountdownTimer(seconds : int, message : string)
}

class AnimatedTimer
{
    -_animationSteps : List<string>
    +Animatedimer(seconds : int, message : string, animationStepsCombinedWithCommas : string)
    -SetAnimationSteps(stepsCombinedWithCommas : string) : void
    -RunTimer() : void
}

BreathingActivity <|-- Activity
ReflectionActivity <|-- Activity
ListingActivity <|-- Activity
Activity <-- AnimatedTimer
BreathingActivity <-- CountdownTimer
BreathingActivity <-- AnimatedTimer
ReflectionActivity <-- CountdownTimer
ReflectionActivity <-- AnimatedTimer
ListingActivity <-- CountdownTimer
ListingActivity <-- AnimatedTimer
CountdownTimer <|-- Timer
AnimatedTimer <|-- Timer
Program <-- Prompt
Program <-- BreathingActivity
Program <-- ReflectionActivity
Program <-- ListingActivity


@enduml